# cosmic

./: .gitignore  Dockerfile  Makefile  commit  skaffold.yaml
rust/: Cargo.toml
rust/mechtron-common/.cargo/: config.toml
websites/starlane.io/content/: about.md  contact.md  roadmap.md
websites/starlane.io/content/docs/: bind-and-config.md  bind-routes.md  bind_and_config.md  create.md  docs.md  get-set-delete.md  getting-started.md  index.md  install.md  mech-install.md  mechtrons-and-apps  mechtrons-and-apps.md  particles-pointers-and-kinds.md  security.md  select.md  terms.md
websites/starlane.io/content/docs/tutorial/: index.md
websites/starlane.io/content/docs/tutorial/lesson-1/: index.md
websites/starlane.io/themes/starlane/layouts/: index.html
websites/thecosmicinitiative.io/: config.toml
websites/thecosmicinitiative.io/content/: contact.md
websites/thecosmicinitiative.io/static/css/: home.css  style.css
websites/thecosmicinitiative.io/themes/starlane/layouts/: index.html
